# structured-sql

./: .gitignore  Cargo.toml  file.sqlite  justfile  silo.dot  test.db
dbg/: to-table-for-AddressTT.rs  to-table-for-Person.rs
silo/: Cargo.toml
silo-derive/: Cargo.toml
silo-derive/src/: as_params.rs  attributes.rs  base_struct.rs  enum_helper.rs  error.rs  filter.rs  from_row.rs  from_row_type.rs  into_sql_table.rs  lib.rs  partial.rs  row_type.rs  to_columns.rs  to_table.rs  type_checker.rs
silo-derive/src/to_columns/: as_params.rs  extract_from_row.rs  filterable.rs  partial.rs
silo-derive/src/to_table/: as_params.rs  attributes.rs  base_struct.rs  enum_helper.rs  filter.rs  from_row.rs  into_sql_table.rs  partial.rs  row_type.rs  to_columns.rs
silo/src/: conversions.rs  derive.rs  error.rs  filter.rs  lib.rs  main.rs  partial.rs  projections.rs  tests.rs
structured-sql/: Cargo.toml
structured-sql-derive/: Cargo.toml
structured-sql-derive/src/: lib.rs
structured-sql/src/: lib.rs
test-structured-sql/: Cargo.toml
test-structured-sql/src/: crashtest.rs  main.rs
