[package]
name = "silo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
const_format = { version = "0.2.34", features = ["rust_1_83"] }
konst = { version = "0.3.16", features = [
    "rust_latest_stable",
    "rust_1_83",
    "alloc",
] }
rusqlite = { version = "0.36.0", features = [
    "bundled",
    "backup",
    "chrono",
    "time",
] }
silo-derive = { path = "../silo-derive/" }
strum = { version = "0.27.1", features = ["derive"] }
time = "0.3.41"
