[package]
name = "silo"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive"]
enable_debug_sql = []
derive = ["dep:silo-derive"]

[dependencies]
chrono = "0.4.41"
const_format = { version = "0.2.34", features = ["rust_1_83"] }
konst = { version = "0.3.16", features = [
    "rust_latest_stable",
    "rust_1_83",
    "alloc",
] }
rusqlite = { version = "0.36.0", features = [
    "bundled",
    "backup",
    "chrono",
    "time",
] }
silo-derive = { path = "../silo-derive/", optional = true }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.18"
time = "0.3.41"
uuid = "1.23.3"
