[package]
name = "test-structured-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
facet = "0.27.14"
rusqlite = { version = "0.36.0", features = ["bundled"] }
silo = { version = "0.1.0", path = "../silo" }
silo-derive = { version = "0.1.0", path = "../silo-derive" }
time = "0.3.41"
